--- a/public/scss/_main-page-style.scss
+++ b/public/scss/_main-page-style.scss
@@ -4,3 +4,10 @@
     background-size: cover;
     height: 500px;
 }
+
+.utp_section {
+    background-image: url(../img/advantage_bg.webp);
+    color:white;
+    background-size: cover;
+    height: 500px;
+}
