--- a/public/scss/_sidebar-schem.scss
+++ b/public/scss/_sidebar-schem.scss
@@ -6,8 +6,7 @@
 
     .sidebar{
         z-index: 1000;
-        max-width: 370px;
-        min-width: 320px;
+        width: 370px;
         box-shadow: $box_shadow;
         padding: 10px;
         display: flex;
@@ -138,9 +137,77 @@
         }
     }
 }
+.burger-btn{
+    position: relative;
+    display: block;
+    margin-left: auto;
+    width: 45px;
+    height: 40px;
+    min-height: auto;
+    padding: 0;
+    background-color: transparent;
+    z-index: 105;
+    span{
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: var(--dark);
+        transform: translateY(-50%);
+        opacity: 1;
+        transition: var(--great-transition);
+    }
+    &::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: var(--dark);
+        transition: var(--great-transition);
+    }
+    &::after{
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: var(--dark);
+        transition: var(--great-transition);
+    }
+    &:hover{
+        background-color: transparent;
+    }
+    &.active{
+        span{
+            opacity: 0;
+        }
+        &::before{
+            top: 50%;
+            transform: translateY(-50%) rotate(45deg);
+        }
+        &::after{
+            bottom: 50%;
+            transform: translateY(50%) rotate(-45deg);
+        }
+    }
+}
+// ============================================
+@media screen and (max-width:1400px){
+    .sidebar_schem {
+        .sidebar {
+            width: 275px;
+            .sb_body {
+                padding-left: 30px;
+            }
+        }
+    }
+}
 
-
-@media (max-width:1024px) {
+@media screen and (max-width:1024px) {
     .mobile_menu_btn{
         display: flex;
     }
