--- a/public/scss/elements/_button.scss
+++ b/public/scss/elements/_button.scss
@@ -1,15 +1,22 @@
 button,
 .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: $main_color;
-    border: 1px solid $main_color;
-    color:white;
-    padding: 10px 30px;
+
+    color:var(--light);
+    min-height: 48px;
+    width: fit-content;
+    padding: 9px 30px;
+    padding-bottom: 11px;
     cursor: pointer;
     transition: $main_transition;
-    display: inline-block;
-    line-height: 1;
-    font-family: $main_fonts;
-    font-size: 16px;
+    line-height: 1.2;
+    font-family: 'Lato', sans-serif;
+    font-size: 22px;
+    font-weight: 600;
+    box-sizing: border-box;
 
     &:hover {
         background-color: $hover_color;
@@ -19,7 +26,7 @@ button,
 .button-white {
     background-color: white;
     color: $main_color;
-    border: 1px solid $main_color;
+    border: 1px solid var(--light);
     text-decoration: none;
 
     &:hover{
