поправил кнопку бургер

--- a/public/scss/_sidebar-schem.scss
+++ b/public/scss/_sidebar-schem.scss
@@ -139,7 +139,7 @@
 }
 .burger-btn{
     position: relative;
-    display: block;
+    display: none;
     margin-left: auto;
     width: 45px;
     height: 40px;
