--- a/public/scss/media.scss
+++ b/public/scss/media.scss
@@ -1,6 +1,6 @@
 @media screen and (max-width: 1200px){
-    .product_slider_section{
-        // display: none;
+    .burger-btn{
+        display: block;
     }
     .logo_img {
         width: 100px;
