Разбивка по страницам

--- a/public/scss/_main-page-style.scss
+++ b/public/scss/_main-page-style.scss
@@ -106,7 +106,7 @@
 }
 
 .advantages_section{
-    background-color: gold;
+    background-image: url(../img/adv_b.webp);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
