--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -1,3 +1,9 @@
-header{
-    
+.page_section {
+    color:white;
+    .subtitle {
+        margin-bottom: 2rem;
+    }
+    h1 {
+        margin-bottom: 2rem;
+    }
 }
