--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -53,6 +53,45 @@ a {
     display: none
 }
 
+.collumn_box {
+    display: flex;
+    flex-wrap: wrap;
+
+    &.c2 .coll {
+        width: 48%;
+    }
+}
+
+.inline_icon {
+    position: relative;
+    padding-left: 25px;
+
+    &.icon_map-pin::before {
+        content: "";
+        background-image: url('../img/icon/map_pin.svg');
+        position: absolute;
+        left:3px;
+        top:2px;
+        width:16px;
+        height: 16px
+    }
+}
+
+.map_page {
+    width:100%;
+    height: 350px;
+    margin-top: 40px;
+    border:1px solid lightgray;
+}
+
+.contact_in_page {
+    .phone_lnk {
+        font-size: 32px;
+        color:black
+    }
+}
+
+@import "header";
 @import "sidebar-schem";
 @import "main-page-style";
 @import "footer";
