--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -91,8 +91,15 @@ a {
     }
 }
 
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 @import "header";
 @import "sidebar-schem";
 @import "main-page-style";
 @import "footer";
 @import "media";
+@import "products";
