--- a/public/scss/elements/_products-item.scss
+++ b/public/scss/elements/_products-item.scss
@@ -4,6 +4,7 @@
     padding: 20px;
     box-sizing: border-box;
     border-right: 1px solid #E0E9F8;
+    height: 100%;
     .products-item__img{
         display: block;
         width: 25%;
@@ -15,14 +16,23 @@
         width: 75%;
         padding-left: 20px;
         box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
     }
     .products-item__caption{
         display: block;
         margin-bottom: 10px;
-        font-size: 24px;
+        font-size: 22px;
         font-weight: 600;
+        margin-bottom: 20px;
     }
     .products-item__description{
         font-size: 16px;
+    }
+
+    .products-item__more {
+        margin-top: auto;
+        margin-bottom: 0;
     }
 }
