--- a/public/scss/_products.scss
+++ b/public/scss/_products.scss
@@ -37,3 +37,27 @@
     }
 
 }
+
+@media screen and (max-width:1280px){
+    .prosucts_apge_wrapper {
+        .prosuct{
+            width:31%;
+        }
+    }
+}
+
+@media screen and (max-width:768px){
+    .prosucts_apge_wrapper {
+        .prosuct{
+            width:48%;
+        }
+    }
+}
+
+@media screen and (max-width:480px){
+    .prosucts_apge_wrapper {
+        .prosuct{
+            width:100%;
+        }
+    }
+}
