--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -62,6 +62,14 @@ a {
     }
 }
 
+@media screen and (max-width:768px){
+    .collumn_box {
+        &.c2 .coll {
+            width: 100%;
+        }
+    }
+}
+
 .inline_icon {
     position: relative;
     padding-left: 25px;
@@ -103,3 +111,5 @@ img{
 @import "footer";
 @import "media";
 @import "products";
+@import "services";
+@import "inner-page";
