+Окно отправки запроса

--- a/public/scss/form/_label.scss
+++ b/public/scss/form/_label.scss
@@ -7,3 +7,17 @@ label{
         color: red;
     }
 }
+
+label._error{
+    color: red;
+    a {
+        color: red;
+    }
+}
+
+.checkbox_label {
+    display: flex;
+    span {
+        margin-left: 10px;
+    }
+}
