--- a/public/scss/form/_input.scss
+++ b/public/scss/form/_input.scss
@@ -25,6 +25,10 @@ input{
     height: 2.5em;
 }
 
+input._error {
+    background-color: #FF00002a;
+}
+
 input[type=checkbox] {
     width: 15px;
     height: 15px;
